--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
 
   <section class="panel" data-panel="sub">
     <!--sub-->
-    <h1 class="sectitle">подПИСКА</h1>
+    <div class="orderdiv">
+      <h1 class="sectitle">подПИСКА</h1>
+    </div>
   </section>
 
 
