--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div id="cart-root"></div>
 
     <div class="slot-block" id="slot-block">
-      <div class="slot-title">Когда бы вы хотели бы получать заказ? (еженедельно)</div>
+      <div class="slot-title">Когда бы вы хотели получать заказ? (еженедельно)</div>
 
       <div class="slot-row">
         <div class="slot-row-title">День</div>
